[gd_scene load_steps=3 format=3 uid="uid://dcp86ykns8uyb"]

[ext_resource type="Script" path="res://assets/scripts/entities/menu.gd" id="1_ifwo3"]
[ext_resource type="AudioStream" uid="uid://dp63rksb0egko" path="res://assets/sounds/bgm/Entry of the Gladiator.mp3" id="2_cb5nv"]

[node name="Menu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ifwo3")

[node name="IdleTimer" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -42.5
offset_top = -68.0
offset_right = 42.5
offset_bottom = 68.0
grow_horizontal = 2
grow_vertical = 2

[node name="iniciar" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../sair")
text = "INICIAR"

[node name="opcoes" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "OPÇÕES"

[node name="creditos" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "CRÉDITOS"

[node name="sair" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_bottom = NodePath("../iniciar")
text = "SAIR"

[node name="Song" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_cb5nv")

[connection signal="timeout" from="IdleTimer" to="." method="_on_idle_timer_timeout"]
[connection signal="pressed" from="VBoxContainer/iniciar" to="." method="_on_iniciar_pressed"]
[connection signal="pressed" from="VBoxContainer/opcoes" to="." method="_on_opcoes_pressed"]
[connection signal="pressed" from="VBoxContainer/creditos" to="." method="_on_creditos_pressed"]
[connection signal="pressed" from="VBoxContainer/sair" to="." method="_on_sair_pressed"]
